Parent 53 (#44)
No source changes but reformat, and:
- parent pom 53
- slight updates for Java 21 (add-opens etc)
- wrapper updated
- added GH CI and dependabot